// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DatetimePicker > render tests > renders correctly the today shortcut when the range picker is disabled 1`] = `
<div
  class="m-2"
  data-testid="shortcut-today-1720000034990"
>
  <button
    class="btn btn-outline-dark btn-sm w-100"
    data-testid="shortcut-today-from-1720000034990"
    type="button"
  >
    Today
  </button>
</div>
`;

exports[`DatetimePicker > render tests > renders correctly the today shortcut when the range picker is enabled 1`] = `
<div
  class="m-2"
  data-testid="shortcut-today-1720000034990"
>
  <div
    class="d-flex justify-content-between"
  >
    <button
      class="btn btn-outline-dark btn-sm w-100 me-1"
      data-testid="shortcut-today-from-1720000034990"
      type="button"
    >
      Today
    </button>
    <span
      class="d-flex align-items-center"
    >
      -
    </span>
    <button
      class="btn btn-outline-dark btn-sm w-100 ms-1"
      data-testid="shortcut-today-to-1720000034990"
      type="button"
    >
      Today
    </button>
  </div>
</div>
`;
